<resources>
    <string name="app_name">AutoResto</string>
    <string name="akun">Akun</string>
    <string name="order">Order</string>
    <string name="menu">Menu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_menu">Menu</string>
    <string name="title_order">Pesanan</string>
    <string name="title_account">Akun</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_food">Makanan</string>
    <string name="status_order">Sedang dipesan</string>
    <string name="time_order">00 Januari 2020, 00:00</string>
    <string name="title_price">0.000</string>
    <string name="title_drink">Minuman</string>
    <string name="title_phone">+62XXXXXXXXXXX</string>
    <string name="title_name">Avatar</string>
    <string name="title_email">avatar@gmail.com</string>
    <string name="title_edit_profile">Edit Profil</string>
    <string name="title_edit_password">Edit Password</string>
    <string name="title_service">Layanan</string>
    <string name="title_call_center">Hubungi Kami</string>
    <string name="call_center_description">Apabila anda punya\npertanyaan, keluhan dan saran.\nHubungi Kami</string>
    <string name="title_about">Tentang AutoResto</string>
    <string name="title_history">Riwayat Pesanan</string>
    <string name="status_order_1">Order selesai</string>
    <string name="title_action_bar">Title</string>
    <string name="title_saldo">Saldo</string>
    <string name="title_note">No note</string>
    <string name="title_add_note">Tambah catatan</string>
    <string name="title_description">Description</string>
    <string name="cancel">Batal</string>
    <string name="add">Tambah</string>
    <string name="service_title">AutoResto Service</string>
    <string name="service">1. Plated Service.\n2. Pesan dari Apliaksi.\n3. Waiters Robot.</string>
    <string name="service_description">Auto resto menyediakan layanan pesan makanan melalui aplikasi yang disediakan di setiap meja.\n\nCustomer akan dengan mudah melakukan pemesanan melalui aplikasi dengan cara mendaftarkan akun ke Auto Resto.\n\nAuto resto menyediakan plated service dimana makanan akan disajikan diatas piring.\n\nSetelah itu robot pengantar (waiter) makanan akan mengantarkan pesanan ke setiap meja sesuai dengan nomor meja yang tercantum pada aplikasi.</string>
    <string name="about_title">AutoResto</string>
    <string name="about_description">Auto Resto meghadirkan sebuah restoran dengan tempat yang nyaman dan cocok untuk tempat nongkrong bersama teman, keluarga dan orang-orang tersayang.\n\nAuto Resto memanfaatkan teknologi digital dalam proses transaksi pemesanan makanan dengan menggunakan aplikasi.\n\nAnda akan dimanjakan dengan fasilitas pesan dari meja tanpa perlu antri ke kasir.\n\nCukup menggunakan aplikasi Auto Resto anda dapat memilih menu makanan dan minuman yang anda suka dengan sekali klik. Anda juga akan mendapatkan pelayanan dari waiters robot yang akan mengantarkan pesanan anda.\n\nRobot otomatis akan bergerak ke meja anda ketika pesanan anda siap untuk dihidangkan.\n\nAuto Resto merupakan restoran yang berhasil menarik banyak pelanggan tiap hari dengan fasilitas teknologinya.\n</string>
    <string name="call_center">( 0335 ) 0219444</string>
    <string name="title_table">Reset Meja</string>
</resources>
