<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_bottom"
    xmlns:tools="http://schemas.android.com/tools" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:background="@drawable/border_radius"
            android:src="@drawable/ic_room_service_black_24dp">
        </ImageView>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="17dp"
                android:textStyle="bold"
                tools:text="@string/title_food" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textSize="14dp"
                android:maxLines="1"
                tools:text="@string/status_order" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:textSize="14dp"
                android:maxLines="1"
                tools:text="@string/time_order" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
