<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Profil" />

    <ScrollView
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:background="@drawable/border_radius"
                    android:src="@drawable/ic_account">
                </ImageView>

                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textSize="@dimen/font_size_17dp"
                        android:textStyle="bold"
                        android:text="@string/title_name" />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_size_12dp"
                        android:text="@string/title_phone" />

                    <TextView
                        android:id="@+id/tv_created_at"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:textSize="@dimen/font_size_12dp"
                        android:maxLines="1"
                        android:text="@string/title_email" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_history" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_history"
                    android:textSize="@dimen/font_size_17dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_account">
                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="@dimen/font_size_17dp"
                    android:textStyle="bold"
                    android:text="@string/title_edit_profile" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_key">
                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="@dimen/font_size_17dp"
                    android:textStyle="bold"
                    android:text="@string/title_edit_password" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_sentiment_satisfied_black_24dp">
                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="@dimen/font_size_17dp"
                    android:textStyle="bold"
                    android:text="@string/title_service" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_call_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_phone">
                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="@dimen/font_size_17dp"
                    android:textStyle="bold"
                    android:text="@string/title_call_center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_restaurant">
                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="@dimen/font_size_17dp"
                    android:textStyle="bold"
                    android:text="@string/title_about" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_radius_button_white"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="30dp"
                android:text="Keluar" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
