<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:background="@drawable/border_bottom"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <androidx.cardview.widget.CardView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp" >

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:background="@drawable/border_radius_grey"
            android:src="@drawable/ic_menu" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_marginTop="5dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="@dimen/font_size_15dp"
                    android:textStyle="bold"
                    tools:text="@string/title_menu" />

                <TextView
                    android:id="@+id/tv_sub_total"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:textAlignment="viewEnd"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="@dimen/font_size_15dp"
                    android:textStyle="bold"
                    tools:text="Rp. 0,-" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:drawableLeft="@drawable/ic_note_24dp"
                android:drawablePadding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size_14dp"
                tools:text="@string/title_add_note" />

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="150dp"
                    android:paddingBottom="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_12dp"
                    android:text="@string/title_description" />


                <RelativeLayout
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/ll_count_food"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:layout_marginBottom="2dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/btn_min"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17dp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:padding="5dp"
                            android:text="-" />

                        <TextView
                            android:id="@+id/tv_count"
                            android:textAlignment="center"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_size_14dp"
                            android:text="0" />

                        <TextView
                            android:id="@+id/btn_add"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textSize="17dp"
                            android:textStyle="bold"
                            android:padding="5dp"
                            android:text="+" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
